--- a/src/css/index.css
+++ b/src/css/index.css
@@ -1,3 +1,11 @@
-#only-for-linting {
-  display: flex;
+body {
+  min-height: 100vh;
+}
+
+main {
+  flex: 1;
+}
+
+#logo_ensimag {
+  max-height: none;
 }
