--- a/src/css/index.css
+++ b/src/css/index.css
@@ -15,3 +15,74 @@ main {
   bottom: 0;
   right: 0;
 }
+
+div.tooltip {
+  position: absolute;
+  text-align: center;
+  color: black;
+  width: 275px;
+  height: 37px;
+  padding: 2px;
+  font: 12px sans-serif;
+  background: grey;
+  border: 0;
+  border-radius: 8px;
+  pointer-events: none;
+}
+
+.heatmap-country-default {
+  fill: grey; /* default country color in heatmap */
+}
+
+#heatmap-title {
+  font-weight: 300;
+  font-size: 16px;
+}
+
+#heatmap-subtitle,
+.legend-text {
+  font-weight: 200;
+  font-size: 12px;
+}
+
+#tooltip > polyline {
+  fill: #222b1d;
+  stroke: black;
+  opacity: 0.9;
+  stroke-width: 1;
+  padding: 1em;
+}
+
+#heatmap-subtitle,
+#tooltip > tspan,
+#tooltip > line,
+.legend-text {
+  stroke: #929292;
+}
+
+#tooltip > line {
+  stroke-width: 0.5;
+}
+
+#heatmap-title,
+#tooltip-score,
+#tooltip > text {
+  fill: #c1d3b8;
+}
+
+#tooltip > text {
+  font-size: 13px;
+}
+
+#tooltip-country {
+  font-weight: 600;
+  font-size: 16px;
+}
+
+#svg {
+  border: 4px solid #000;
+}
+
+#tooltip-score {
+  font-weight: bold;
+}
