--- a/src/css/index.css
+++ b/src/css/index.css
@@ -80,7 +80,8 @@ div.tooltip {
 }
 
 #svg {
-  border: 4px solid #000;
+  border: 2px solid lightgrey;
+  border-radius: 0.5rem;
 }
 
 #tooltip-score {
