--- a/src/css/print.css
+++ b/src/css/print.css
@@ -1,32 +1,22 @@
 nav,
-footer {
+footer,
+#parameters {
   display: none;
 }
 
-body {
-  width: auto !important;
-  margin: auto !important;
-  font-family: serif;
-  font-size: 12pt;
-  background-color: #fff !important;
-  color: #000 !important;
+img {
+  max-height: 25rem;
 }
 
-code {
-  color: #000 !important;
-}
-
+body,
+code,
 a {
-  color: #000 !important;
-  text-decoration: underline !important;
+  color: #000;
 }
 
 a[href]::after {
   content: " (" attr(href) ")"; /* affichage des URL des liens */
-}
-
-#parameters {
-  display: none !important;
+  text-decoration: underline;
 }
 
 .tag {
